Добавлены описания swagger для написанных сейчас методов. Добавлена уникальность поля электронной почты в таблице пользователя.
