# backend/auth/internal/controllers/office.go
@@ -23,6 +23,17 @@ func AddOfficeControllerRoutes(router *fiber.Router, s OfficeService) {
 	api.Get("/title/:title", controller.GetByTitle)
 }
 
+// Get Office By ID
+// @Summary      Get Office by ID
+// @Description  Получение информации об офисе по его идентификатору
+// @Tags         Office
+// @Accept       json
+// @Produce      json
+// @Param        id path  int  true  "Office ID"
+// @Success      200  {object}  models.Office
+// @Failure      400  {object}  error
+// @Failure      404  {object}  error
+// @Router       /office/{id} [get]
 func (con OfficeController) GetByID(c fiber.Ctx) error {
 	id := fiber.Params(c, "id", 0)
 	if id < 1 {
@@ -30,21 +41,6 @@ func (con OfficeController) GetByID(c fiber.Ctx) error {
 	}
 
 	office, err := con.OfficeService.GetByID(id)
-	if err != nil {
-		// TODO: Добавить обработку разных ошибок
-		return c.Status(fiber.StatusNotFound).SendString("Не удалось получить офис")
-	}
-
-	return c.Status(fiber.StatusOK).JSON(office)
-}
-
-func (con OfficeController) GetByTitle(c fiber.Ctx) error {
-	title := fiber.Params(c, "title", "")
-	if title == "" {
-		c.Status(fiber.StatusBadRequest).SendString("title страны обязателен")
-	}
-
-	office, err := con.OfficeService.GetByTitle(title)
 	if err != nil {
 		// TODO: Добавить обработку разных ошибок
 		return c.Status(fiber.StatusNotFound).SendString("Не удалось получить офис")
