# backend/auth/internal/controllers/user.go
@@ -27,6 +27,17 @@ func AddUserControllerRoutes(api *fiber.Router, userUseCase UserUseCase, authMid
 	(*api).Get("user/", controller.GetByID, authMiddleware.IsAdmin)
 }
 
+// Get User By ID
+// @Summary      Get user by ID
+// @Description  Получение информации о пользователе по его идентификатору
+// @Tags         Users
+// @Accept       json
+// @Produce      json
+// @Param        user_id query  int  true  "User ID"
+// @Success      200  {object}  models.User
+// @Failure      400  {object}  error
+// @Failure      404  {object}  error
+// @Router       /user/ [get]
 func (uc *UserController) GetByID(ctx fiber.Ctx) error {
 	user_id := fiber.Query[int](ctx, "user_id")
 
